# ayaka

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: ayaka.json.in  mime.types
res/html/: 400.html.in  404.html.in  405.html.in  index.html.in
src/: case.cpp  case.hpp  conf.cpp  conf.hpp  downstream.cpp  downstream.hpp  error.hpp  http_except.cpp.in  http_except.hpp  http_handler.cpp  http_handler.hpp  http_method.hpp  http_parser.cpp  http_parser.hpp  http_status.hpp  inet_addr.cpp  inet_addr.hpp  location.cpp  location.hpp  logger.hpp  loop.cpp  loop.hpp  main.cpp  mime.cpp  mime.hpp  request.hpp  response.cpp  response.hpp  router.cpp  router.hpp  send_pack.cpp  send_pack.hpp  server.cpp  server.hpp  static_handler.cpp  static_handler.hpp  tcp.cpp  tcp.hpp  url.cpp  url.hpp  (+3 more)
test/: case_test.cpp  conf_test.cpp  http_except_test.cpp  http_parser_test.cpp  http_status_test.cpp  inet_addr_test.cpp  location_test.cpp  mime_test.cpp  response_test.cpp  send_pack_test.cpp  static_handler_test.cpp  tcp_test.cpp  test.hpp  url_test.cpp
